tests/sources/invalid/classes/field_access_unknown_field.fire
// Semantic error: accessing a field that does not exist on the class.

class Point {
    x: int32;
    y: int32;

    fn Point(x: int32, y: int32) {
        this.x = x;
        this.y = y;
    }
}

fn field_access_unknown_field() -> void {
    p: Point = new Point(1, 2);
    z: int32 = p.z;  //~ ERROR FS-SEM-0010 @18
}
